feat(ui): add rose pine themes

--- a/src/app.html
+++ b/src/app.html
@@ -54,11 +54,19 @@
 				} else if (localStorage.theme === 'light') {
 					document.documentElement.classList.add('light');
 					metaThemeColorTag.setAttribute('content', '#ffffff');
-				} else if (localStorage.theme === 'her') {
-					document.documentElement.classList.add('dark');
-					document.documentElement.classList.add('her');
-					metaThemeColorTag.setAttribute('content', '#983724');
-				} else {
+                                } else if (localStorage.theme === 'her') {
+                                        document.documentElement.classList.add('dark');
+                                        document.documentElement.classList.add('her');
+                                        metaThemeColorTag.setAttribute('content', '#983724');
+                                } else if (localStorage.theme === 'rose-pine dark') {
+                                        document.documentElement.classList.add('rose-pine');
+                                        document.documentElement.classList.add('dark');
+                                        metaThemeColorTag.setAttribute('content', '#191724');
+                                } else if (localStorage.theme === 'rose-pine-dawn light') {
+                                        document.documentElement.classList.add('rose-pine-dawn');
+                                        document.documentElement.classList.add('light');
+                                        metaThemeColorTag.setAttribute('content', '#fffaf3');
+                                } else {
 					document.documentElement.classList.add('dark');
 					metaThemeColorTag.setAttribute('content', '#171717');
 				}
